<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!--inherit from ECommerceMicroservices-->
	<parent>
		<groupId>com.tjtechy</groupId>
		<artifactId>ECommerceMicroservices</artifactId>
		<version>0.0.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>product-service</artifactId>
	<name>product-service</name>
	<description>Product Service Module for ECommerce Microservices</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>25</java.version>
<!--		<spring-cloud.version>2024.0.0</spring-cloud.version>-->
		<springdoc.version>3.0.3</springdoc.version>
		<testcontainers.version>2.0.5</testcontainers.version>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-server</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-http</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-util</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-io</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty.http2</groupId>
					<artifactId>http2-server</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!--Spring boot Starter WebFlux (For WebClient)-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-webflux</artifactId>-->
<!--		</dependency>-->

		<!-- Eureka Client -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>

		<!--Observability stack dependencies: Already added to the parent pom.xml-->
		<!-- Spring Boot Actuator (Optional - Useful for Monitoring) -->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; Micrometer prometheus registry &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>io.micrometer</groupId>-->
<!--			<artifactId>micrometer-registry-prometheus</artifactId>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; OpenTelemetry exporter for Prometheus &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>io.opentelemetry.instrumentation</groupId>-->
<!--			<artifactId>opentelemetry-instrumentation-api</artifactId>-->
<!--			<version>2.20.1</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>system</artifactId>
			<version>0.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>exception</artifactId>
			<version>0.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Add common-utils Dependency -->
		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>common-utils</artifactId>
			<version>0.0.1</version>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- JavaTime dependency to deserialize LocalDate -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
<!--			<version>2.18.2</version>-->
		</dependency>

		<!-- Optional: For using JSON serialization in Redis,
			 You don't need this if we are not serializing in redis
			 -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<!--			<version>2.18.2</version>-->
		</dependency>

		<!--dev tools-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

        <!--Add spring cloud config client dependency so application can use the
        config server config file-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>

		<!--Add spring cloud bootstrap dependency so application can use the
		config server config file-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-bootstrap</artifactId>
		</dependency>

		<!-- Add dependencies for caching -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<!-- Tests dependencies -->

		<!-- PostgreSQL Test Container -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-postgresql</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-jdbc-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!--JUnit-->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-webtestclient</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Embedded Redis for Testing -->
		<!--This is causing issue when starting embedded redis server, that is why I switched to
		com.github.kstyrc-->
<!--		<dependency>-->
<!--			<groupId>it.ozimov</groupId>-->
<!--			<artifactId>embedded-redis</artifactId>-->
<!--			<version>0.7.2</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

		<!-- https://mvnrepository.com/artifact/com.github.kstyrc/embedded-redis -->
		<dependency>
			<groupId>com.github.kstyrc</groupId>
			<artifactId>embedded-redis</artifactId>
			<version>0.6</version>
			<scope>test</scope>
		</dependency>

		<!-- Add Jetty 11 backend explicitly -->
<!--		<dependency>-->
<!--			<groupId>org.wiremock</groupId>-->
<!--			<artifactId>wiremock-jetty12</artifactId>-->
<!--			<version>3.13.2</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.wiremock</groupId>-->
<!--			<artifactId>wiremock</artifactId>-->
<!--			<version>3.13.2</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.wiremock</groupId>
			<artifactId>wiremock-standalone</artifactId>
			<version>3.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<!-- api documentation HTML FORMAT AND JSON FORMAT-->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
